--- a/results.html
+++ b/results.html
@@ -4600,3 +4600,153 @@ Log session start time Mon Sep 11 07:11:47 EET 2017<br>
 <td>MyLogger.java:14</td>
 <td title="Message">Saved screenshot: screenshots/scr368717955825946</td>
 </tr>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+<html>
+<head>
+<title>Test result</title>
+<style type="text/css">
+<!--
+body, table {font-family: arial,sans-serif; font-size: x-small;}
+th {background: #336699; color: #FFFFFF; text-align: left;}
+-->
+</style>
+</head>
+<body bgcolor="#FFFFFF" topmargin="6" leftmargin="6">
+<hr size="1" noshade>
+Log session start time Mon Sep 11 22:32:45 EET 2017<br>
+<br>
+<table cellspacing="0" cellpadding="4" border="1" bordercolor="#224466" width="100%">
+<tr>
+<th>Time</th>
+<th>Thread</th>
+<th>Level</th>
+<th>Category</th>
+<th>File:Line</th>
+<th>Message</th>
+</tr>
+
+<tr>
+<td>0</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.epam.atm.utils.MyLogger category">com.epam.atm.utils.MyLogger</td>
+<td>MyLogger.java:14</td>
+<td title="Message">РageLoadTimeout set: 25 seconds</td>
+</tr>
+
+<tr>
+<td>16</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.epam.atm.utils.MyLogger category">com.epam.atm.utils.MyLogger</td>
+<td>MyLogger.java:14</td>
+<td title="Message">ImplicitlyWait set: 25 seconds</td>
+</tr>
+
+<tr>
+<td>16</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.epam.atm.utils.MyLogger category">com.epam.atm.utils.MyLogger</td>
+<td>MyLogger.java:14</td>
+<td title="Message">ScroptTimeout set: 25 seconds</td>
+</tr>
+
+<tr>
+<td>9896</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.epam.atm.utils.MyLogger category">com.epam.atm.utils.MyLogger</td>
+<td>MyLogger.java:14</td>
+<td title="Message">Saved screenshot: screenshots/scr423853661278658</td>
+</tr>
+
+<tr>
+<td>9896</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.epam.atm.utils.MyLogger category">com.epam.atm.utils.MyLogger</td>
+<td>MyLogger.java:14</td>
+<td title="Message">Home page is open</td>
+</tr>
+
+<tr>
+<td>21737</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.epam.atm.utils.MyLogger category">com.epam.atm.utils.MyLogger</td>
+<td>MyLogger.java:14</td>
+<td title="Message">Saved screenshot: screenshots/scr423865533627901</td>
+</tr>
+
+<tr>
+<td>21737</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.epam.atm.utils.MyLogger category">com.epam.atm.utils.MyLogger</td>
+<td>MyLogger.java:14</td>
+<td title="Message">Home page is open</td>
+</tr>
+
+<tr>
+<td>25135</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.epam.atm.utils.MyLogger category">com.epam.atm.utils.MyLogger</td>
+<td>MyLogger.java:14</td>
+<td title="Message">Saved screenshot: screenshots/scr423868932362730</td>
+</tr>
+
+<tr>
+<td>25135</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.epam.atm.utils.MyLogger category">com.epam.atm.utils.MyLogger</td>
+<td>MyLogger.java:14</td>
+<td title="Message">Home page is open</td>
+</tr>
+
+<tr>
+<td>28231</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.epam.atm.utils.MyLogger category">com.epam.atm.utils.MyLogger</td>
+<td>MyLogger.java:14</td>
+<td title="Message">Saved screenshot: screenshots/scr423872027019583</td>
+</tr>
+
+<tr>
+<td>28232</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.epam.atm.utils.MyLogger category">com.epam.atm.utils.MyLogger</td>
+<td>MyLogger.java:14</td>
+<td title="Message">Home page is open</td>
+</tr>
+
+<tr>
+<td>30692</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.epam.atm.utils.MyLogger category">com.epam.atm.utils.MyLogger</td>
+<td>MyLogger.java:14</td>
+<td title="Message">Saved screenshot: screenshots/scr423874489880646</td>
+</tr>
+
+<tr>
+<td>30693</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.epam.atm.utils.MyLogger category">com.epam.atm.utils.MyLogger</td>
+<td>MyLogger.java:14</td>
+<td title="Message">Home page is open</td>
+</tr>
+
+<tr>
+<td>30762</td>
+<td title="main thread">main</td>
+<td title="Level">INFO</td>
+<td title="com.epam.atm.utils.MyLogger category">com.epam.atm.utils.MyLogger</td>
+<td>MyLogger.java:14</td>
+<td title="Message">Afisha visible</td>
+</tr>
